--- a/style.css
+++ b/style.css
@@ -1,4 +1,77 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.navbar{
+    height: 100vh;
+    width: 314px;
+    background-color: black;
+    position: sticky;
+    
+}
+.side-bar{
+    width: 244px;
+    margin-left: 20px;
+    padding: 12px;
+}
+.logo i{
+    color: white;
+    margin-left: 45px;
+}
+.navbar-icon{
+    width: 244px;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    color: white;
+    cursor: pointer;
+    padding-left: 10px;
+
+}
+.navbar-icon i{
+    width: 26px;
+    height: 26px;
+    margin-right: 20px;
+    
+}
+.navbar-icon:hover{
+    background-color: #181818;
+    border-radius: 25px;
+}
+.tweet-button button{
+    width: 219px;
+    height: 50px;
+    border-radius: 25px;
+    color: white;
+    background-color: aqua;
+}
+.profiles{
+    width: 244px;
+    height: 65px;
+    padding: 12px;
+    display: flex;
+    cursor: pointer;
+}
+.profiles:hover{
+    background-color: #181818;
+    border-radius: 30px;
+}
+.profile-image img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+}
+.account-details{
+    margin: 0;
+}
+.account-name{
+    margin-left: 12px;
+    color: white;
+    font-weight: 700;
+}
+.user-name{
+    margin-left: 12px;
+    color: #6c7075;
 }
