--- a/style.css
+++ b/style.css
@@ -291,3 +291,52 @@
     padding: 16px 12px 5px 12px;
     color: dodgerblue;
 }
+
+
+.who-to-follow{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+.follow{
+    background-color: #181818;
+    width: 348px;
+    border-radius: 20px;
+    padding: 12px 16px;
+}
+.follow-header{
+    height: 48px;
+    padding: 0 16px;
+}
+.follow-header h5{
+    color: white;
+}
+.who-profile{
+    display: flex;
+    justify-content: space-between;
+}
+.profile-pic{
+    display: flex;
+}
+.profile-pic img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50px;
+    padding-left: 6px;
+}.profile-pic-info{
+    padding-left: 10px;
+}
+.profile-username{
+    color: white;
+}
+.pic-name{
+    color: #6c7075;
+}
+.who-profile button{
+    width: 78px;
+    height: 32px;
+    border-radius: 15px;
+    padding: 0 16px;
+    border: none;
+    color: black;
+}
